--- a/Web.Statu/Views/Home/_SearchFormHelpContent.cshtml
+++ b/Web.Statu/Views/Home/_SearchFormHelpContent.cshtml
@@ -12,7 +12,7 @@
                 <a href="#smlouvy" aria-controls="smlouvy" role="tab" data-toggle="tab">Parametry pro <b>REGISTR SMLUV</b></a>
             </li>
             <li role="presentation">
-                <a href="#smlouvy" aria-controls="vz" role="tab" data-toggle="tab">Parametry pro <b>VEŘEJNÉ ZAKÁZKY</b></a>
+                <a href="#vz" aria-controls="vz" role="tab" data-toggle="tab">Parametry pro <b>VEŘEJNÉ ZAKÁZKY</b></a>
             </li>
             <li role="presentation">
                 <a href="#insolvence" aria-controls="insolvence" role="tab" data-toggle="tab">Parametry pro <b>INSOLVENCE</b></a>
