--- a/Web.Statu/Views/Home/Subjekt_Dodavatel.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Dodavatel.cshtml
@@ -119,7 +119,7 @@ val in ((BucketAggregate)res.Result.Aggregations["perIco"]).Items)
             {
                 <hr class="morespace" style="width:50%;" />
 
-                <h3 style="padding-bottom:20px;">@Model.Jmeno jako dodavatel  (příjemce peněz)</h3>
+                <h3 id="_odberatele" style="padding-bottom:20px;">@Model.Jmeno jako dodavatel  (příjemce peněz)</h3>
 
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
@@ -150,5 +150,7 @@ val in ((BucketAggregate)res.Result.Aggregations["perIco"]).Items)
                             }", q.Key)
                         }
                     </div>
+                    <div class="obsah_top"><a href="#_top">△ nahoru</a></div>
+
                 </div>
             }
