--- a/Web.Statu/Views/Weby/_Info.cshtml
+++ b/Web.Statu/Views/Weby/_Info.cshtml
@@ -1,8 +1,8 @@
 ﻿
-@if (DateTime.Now < new DateTime(2019, 6, 29))
+@if (DateTime.Now < new DateTime(2019, 8, 13))
 {
-<div class="alert alert-warning" role="alert">
-    Měření dostupnosti státních webů od <b>úterý 18.6.</b> vykazovalo falešné poplachy.
-    Omlouváme se správcům serverů i uživatelům. Od <b>soboty 22.6. 16:00</b> jsou data již v pořádku.
-</div>
+    <div class="alert alert-warning" role="alert">
+        Měření dostupnosti státních webů během neděle a pondělí mělo problémy. Poškožená a nepřesná data jsme odstranili.
+        Omlouváme se správcům serverů i uživatelům.
+    </div>
 }
